--- a/website2-bootstrap/practice_site2.html
+++ b/website2-bootstrap/practice_site2.html
@@ -8,6 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400" rel="stylesheet">
 	<link rel="stylesheet"  href="css/bootstrap.min.css">
 	<link rel="stylesheet"  href="css/styles.css">
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -32,21 +34,38 @@
 		</div>
 		<div class="row text-center">
 			<div class="col-md-4">
-				<a href="http://placehold.it"><img class="img-responsive" src="http://placehold.it/450x450" alt="placeholder"></a>
+				<img class="img-responsive" src="http://placehold.it/450x450" alt="placeholder" data-toggle="modal" data-target="#project1">
 				<h3 class="text-uppercase">App 1</h3>
 				<p>https://genericURI.net</p>
 			</div>
 			<div class="col-md-4">
-				<a href="http://placehold.it"><img class="img-responsive" src="http://placehold.it/450x450" alt="placeholder"></a>
+				<img class="img-responsive" src="http://placehold.it/450x450" alt="placeholder">
 				<h3 class="text-uppercase">App 2</h3>
 				<p>https://genericURI.net</p>
 			</div>
 			<div class="col-md-4">
-				<a href="http://placehold.it"><img class="img-responsive" src="http://placehold.it/450x450" alt="placeholder"></a>
+				<img class="img-responsive" src="http://placehold.it/450x450" alt="placeholder">
 				<h3 class="text-uppercase">App 3</h3>
 				<p>https://genericURI.net</p>
 			</div>
 		</div>
 	</div>
+	<!-- Modal -->
+    <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                </div>
+                <div class="modal-body">
+                    <img class="img-responsive" src="http://placehold.it/450x450">
+                    This was my first project in this class. I learned a lot about HTML and CSS.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>		
 </html>
