--- a/website2-bootstrap/practice_site2.html
+++ b/website2-bootstrap/practice_site2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=divice-width, initial-scale=1">
+	<meta name="viewport" content="width=divice-width, initial-scale=1"> <!-- This sets the view port to work on mobile devices **Very Important**-->
 	<title>Practice Webpage</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400" rel="stylesheet">
 	<link rel="stylesheet"  href="css/bootstrap.min.css">
