--- a/mostly-fluid-website/pattern-mostly-fluid-quiz-blankcss.html
+++ b/mostly-fluid-website/pattern-mostly-fluid-quiz-blankcss.html
@@ -69,11 +69,38 @@
         width: 100%;
       }
 
-      @media screen and (max-width: 400px) {
-        .dark_blue {
-          color: blue;
+      @media screen and (min-width: 400px) {
+        .dark_blue, .light_blue {
+          width: 50%;
         }
       }
+      @media screen and (min-width: 750px)
+      {
+        .green, .red {
+          width: 50%;
+        }
+        .orange {
+          width: 100%
+        }
+      }
+      @media screen and (min-width: 900px){
+        .dark_blue {
+          width: 100%
+        }
+        .light_blue, .green, .red {
+          width: 33.333333%
+        }
+        .orange {
+          width: 100%
+        }
+      }
+      @media screen and (min-width: 1000px){
+        .container {
+          width: 1000px;
+          margin-left: auto;
+          margin-right: auto;
+          }
+        }
     </style>
   </head>
   <body>
