added additional media queries and tweaks

--- a/quiz-project-2/Start/index.html
+++ b/quiz-project-2/Start/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="responsive.css">
+    <link rel="stylesheet" type="text/css" href="tweaks.css">
   </head>
   <body>
 
@@ -17,6 +18,8 @@
         <h1 class="header__title">
           The Brighton Times
         </h1>
+        <img id="menu" class="header__menu" src="images/menu.svg"> 
+        <!-- Added this image from: https://www.iconfinder.com/icons/134216/hamburger_lines_menu_icon  -->
       </div>
     </header>
 
